# gateway-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_gateway_schema.py  0002_add_users_auth.py  0003_customer_users_and_gateway_keys.py  0004_pool_api_keys.py  0005_cleanup_invalid_gateway_requests.py
app/: __init__.py  db.py  main.py  models.py  schemas.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  api_function.py  gateway_api_key.py  gateway_request.py  pool.py  pool_api_key.py  user.py  vendor.py
app/repositories/: base.py
app/routers/: api_keys.py  auth.py  jobs.py  profiles.py  proxies.py  system.py
app/schemas/: api_function.py  auth.py  customer_auth.py  gateway_key.py  gateway_request.py  google_genai.py  pool.py  pool_api_key.py  user.py  vendor.py
app/scripts/: process_gateway_jobs.py
app/services/: auth_service.py  automation.py  (+5 more)
deploy/: DEPLOY_BACKEND.md  gateway-be.service  install-service.sh
docs/: API_DOCS.md  BOSS_API_KEYS_ARCHITECTURE_ANALYSIS.md  EXECUTION_PHASES.md  IMAGE_GENERATION_GOOGLE_ANALYSIS.md  IMPLEMENTATION_PLAN.md
scripts/: backup-prod-db.sh  deploy-compose.sh  restore-prod-db.sh  run_gateway_job_worker.sh  seed_auth.py  seed_phase2.py  verify-deploy.sh
tests/: conftest.py  test_auth_login.py  test_gateway_api_key_flow.py  test_health.py  test_phase2_crud.py  test_phase3_execute.py  test_phase5_security.py
(+24 files in other folders)
