[project]
name = "gateway-be"
version = "0.1.0"
description = "Gateway automation backend for profiles, proxies, API keys, and Playwright jobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.12",
  "greenlet>=3.1.1",
  "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.27.2",
  "ruff>=0.7.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
